--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,11 +7,11 @@ jobs:
             - name: Checkout repo
               uses: actions/checkout@v3
             - name: Install dependencies
-              uses: npm ci
+              run: npm ci
             - name: Lint project
-              uses: npm lint
+              run: npm run lint
             - name: Run test
-              uses: npm test
+              run: npm run test
     build:
         runs-on: ubuntu-latest
         needs: lint_test
@@ -19,11 +19,11 @@ jobs:
             - name: Checkout repo
               uses: actions/checkout@v3
             - name: Install dependencies
-              uses: npm ci
+              run: npm ci
             - name: Build project
-              uses: npm run build
+              run: npm run build
             - name: Print after completion
-              uses: echo "Complete lint test and build"
+              run: echo "Complete lint test and build"
 
 
     
