--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,7 @@
 name: Test project
 on: push
 jobs:
-    lint_test:
+    lint:
         runs-on: ubuntu-latest
         steps:
             - name: Checkout repo
@@ -10,11 +10,18 @@ jobs:
               run: npm ci
             - name: Lint project
               run: npm run lint
+    test:
+        runs-on: ubuntu-latest
+        steps:
+            - name: Checkout repo
+              uses: actions/checkout@v3
+            - name: Install dependencies
+              run: npm ci
             - name: Run test
               run: npm run test
     build:
         runs-on: ubuntu-latest
-        needs: lint_test
+        needs: [lint, test]
         steps: 
             - name: Checkout repo
               uses: actions/checkout@v3
