--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -5,4 +5,4 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - name: Print issue details
-              run: echo "${{toJSON(github.workflow)}}"
+              run: echo "${{toJSON(github.head_ref)}}"
